# contextlens

./: .gitignore  CHANGELOG.md  COMPRESSION_RESULTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.proxy  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  PRODUCTION_ROADMAP.md  PROJECT_SUMMARY.md  PROXY_README.md  README.md  docker-compose.proxy.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  setup-docker-test.sh
.github/workflows/: ci.yml
contextlens/: __init__.py  benchmarks.py  cli.py  compare.py  compressor.py  hf_utils.py  profiles.py  proxy.py  scanner.py  utils.py
contextlens/integrations/: __init__.py  huggingface.py  llamacpp.py  ollama.py
scripts/: compression_profile.py  ollama_long_context_test.py  realtime_comparison.py  release.sh  test-proxy.sh  test-release.sh  test_compression_integration.py  test_memory_savings.py
tests/: test_compressor.py  test_integrations.py  test_scanner.py
