[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextlens"
version = "0.2.0"
description = "KV cache compression for local LLMs"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ContextLens Team"}]
keywords = ["llm", "kv-cache", "compression", "turboquant", "ollama", "llama.cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "llama-cpp-python>=0.2.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
]

[project.scripts]
contextlens = "contextlens.cli:app"

[project.urls]
Homepage = "https://github.com/contextlens/contextlens"
Repository = "https://github.com/contextlens/contextlens"
Issues = "https://github.com/contextlens/contextlens/issues"

[tool.setuptools.packages.find]
include = ["contextlens*"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
