[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-contextlens"
version = "0.4.3"
description = "Compress your local LLM KV cache with 5.3× memory reduction - Install: pip install llm-contextlens"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ContextLens", email = "contextlens@example.com"}
]
maintainers = [
    {name = "ContextLens", email = "contextlens@example.com"}
]
keywords = [
    "llm",
    "kv-cache",
    "compression",
    "turboquant",
    "ollama",
    "llama.cpp",
    "huggingface",
    "memory-optimization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
ollama = [
    "ollama>=0.1.0",
]
llamacpp = [
    "llama-cpp-python>=0.2.60",
]
all = [
    "ollama",
    "llamacpp",
    "dev",
]

[project.scripts]
llm-contextlens = "contextlens.cli:app"

[project.urls]
Homepage = "https://github.com/gauravbhatia4601/contextlens"
Repository = "https://github.com/gauravbhatia4601/contextlens.git"
Issues = "https://github.com/gauravbhatia4601/contextlens/issues"
Discussions = "https://github.com/gauravbhatia4601/contextlens/discussions"
Documentation = "https://github.com/gauravbhatia4601/contextlens/wiki"
Changelog = "https://github.com/gauravbhatia4601/contextlens/releases"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["contextlens*"]

[tool.setuptools.package-data]
contextlens = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=contextlens --cov-report=term-missing"

[tool.coverage.run]
source = ["contextlens"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
